--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -3,6 +3,10 @@
 <title>Mailroom</title>
 </head>
 <body>
+        <nav>
+        <a id='all' href='{{ url_for('all') }}'>Home</a>
+        <a id='add' href='{{ url_for('create') }}'>Add</a>
+        </nav>
 	<h1>Donations</h1>
 	<h2>{% block subtitle %} {% endblock subtitle %}</h2>
 	{% block content %} {% endblock content %}
